--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							</a>                                  
 						</div>
 						<div class="p-inner">
-							<h4>Asmodeus Darkstone T-shirt Mockup
+							<h4>Headphone Banner Template
 							</h4>
 							<div class="cat">Mockup</div>
 						</div>                                         
@@ -112,7 +112,7 @@
 							</a>                                  
 						</div>
 						<div class="p-inner">
-							<h4>Hell Spirit "Apple" Mockup</h4>
+							<h4>Property Banner Template</h4>
 							<div class="cat">Mockup</div>
 						</div>                                         
 					</div>                            
