--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<ul>
 					<li class="active" data-filter="*">All</li>
 					<li data-filter=".packaging">Logo</li>
-					<li data-filter=".mockup">Mockup</li>
+					<li data-filter=".mockup">Banner</li>
 					<li data-filter=".typography">Poster</li>
 					<li data-filter=".photography">Manipulation/Collage/Others</li>
 				</ul>
