--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							</a>                                
 						</div>
 						<div class="p-inner">
-							<h4>EastWest Hell Spirit Event Poster</h4>
+							<h4>MacBook Air M1 Fan Made Poster</h4>
 							<div class="cat">Poster</div>
 						</div>
 					</div>
