--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							</a>                                  
 						</div>
 						<div class="p-inner">
-							<h4>Property Banner Template</h4>
+							<h4>Pool Banner Template</h4>
 							<div class="cat">Mockup</div>
 						</div>                                         
 					</div>                            
